fixed z-index issue for hero section

--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,9 @@
 /*- Mobile -*/
 
+header {
+  background: transparent;
+}
+
 nav {
   display: flex;
   justify-content: space-between;
@@ -37,7 +41,6 @@ nav.scroll {
   padding-top: 130px;
   left: 0;
   width: 100%;
-  z-index: -1;
 }
 
 .hamburger {
@@ -128,52 +131,6 @@ nav.scroll {
   border-width: 0;
   z-index: 999;
 } */
-
-section.hero_container {
-  position: relative;
-  width: 100%;
-  min-height: 720px;
-  padding: 0;
-  z-index: -1;
-}
-
-section.hero_container .canvas {
-  position: relative;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 720px;
-  overflow: hidden;
-}
-
-.hero_content {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  padding: 1rem;
-  z-index: 1;
-  width: 100%;
-  height: 100%;
-}
-
-.hero_content h1 {
-  font-size: var(--h2);
-  margin-bottom: 1rem;
-}
-
-.hero_content p {
-  display: none;
-}
-
-.canvas img {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  transform: scale(1);
-  object-fit: cover;
-  object-position: 55%;
-}
 
 /*- Desktop -*/
 
